cmake_minimum_required(VERSION 3.8)
project(kickstart)
set(CMAKE_CXX_STANDARD 11)

# 2018
    # Practice
    add_executable(GBus_count "2018/Practice round/GBus count/GBus count.cpp")
    add_executable(Sort_a_scrambled_itinerary "2018/Practice round/Sort a scrambled itinerary/Sort a scrambled itinerary.cpp")
    add_executable(Sums_of_sums "2018/Practice round/Sums of sums/Sums of sums.cpp")
    add_executable(Googol_string "2018/Practice round/Googol string/Googol string.cpp")
    # F
    add_executable(Common_anagrams "2018/F/A/Common anagrams.cpp")
    # H
    add_executable(Big_buttons "2018/H/A/Big buttons.cpp")